<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nette Toilette Navigator</string>
    <string name="app_image">AppImage</string>

    <string name="activity_restrooms_list">Nette Toilette Navigator - Liste</string>
    <string name="activity_restrooms_map">Nette Toilette Navigator - Karte</string>
    <string name="activity_restroom_data">Nette Toilette Navigator - </string>
    <string name="activity_current_position">Nette Toilette Navigator - Mein Standort</string>
    <string name="activity_help">Nette Toilette Navigator - Hilfe</string>
    
    <string name="open_image">OpenImage</string>
    <string name="image_marker">Marker</string>
    <string name="restroom_name">Name</string>
    <string name="restroom_address">Adresse</string>
    <string name="restroom_openinghours">Öffnungszeiten</string>
    <string name="restroom_position">Standort</string>
    <string name="restroom_distance">Entfernung</string>
    <string name="restroom_description">Rohdaten</string>
    <string name="package_str">de.bruns.restrooms.android</string>
    <string name="button_maps">Maps Route</string>
    <string name="button_navigation">Navigation</string>
    <string name="button_streetview">Street View</string>
    <string name="button_aslist">als Liste</string>
    <string name="button_asmap">als Karte</string>
    <string name="button_position">Standort</string>
    <string name="button_help">Hilfe</string>
    <string name="position_manual">Standort manuell setzen</string>
    <string name="position_description_gps">Nutze GPS-Standort (Marker nicht verschiebbar)</string>
    <string name="position_gps">GPS-Standort verwenden</string>
    <string name="position_description_manual">Verschiebe Marker auf aktuellen Standort</string>
    <string name="txt_legende">Zeichenerklärung</string>
    <string name="txt_ueber">Über</string>
    <string name="txt_thanks">Danke</string>
    
</resources>