<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <Button
        android:id="@+id/button_streetview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_streetview" />

    <Button
        android:id="@+id/button_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_navigation" />

    <Button
        android:id="@+id/button_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_maps" />
    </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_name" />
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_address" />
        <TextView
            android:id="@+id/txt_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_openinghours" />
        <TextView
            android:id="@+id/txt_openinghours"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_position" />
        <TextView
            android:id="@+id/txt_position"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_description" />
        <TextView
            android:id="@+id/txt_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/restroom_distance" />
        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <com.google.android.maps.MapView
	        android:id="@+id/map_restroom_location"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:apiKey="0Q8bs9LEx6q3hQmJxS-EOouZSKlYsv7TEw00Dlg"
	        android:clickable="true" />

</LinearLayout>