<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
  	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	>

	<ListView android:id="@+id/android:list" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dip"
		android:layout_alignParentTop="true"
		android:layout_above="@+id/layout_buttons" 
		android:drawSelectorOnTop="false"
		android:layout_marginBottom="10dip" 
		android:cacheColorHint="#00000000" />

	<LinearLayout
        android:id="@+id/layout_buttons" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
		android:orientation="horizontal"
     >
	    
	<Button
        android:id="@+id/button_asmap"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_asmap" 
    	/>

    <Button
        android:id="@+id/button_position"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_position" 
        />

    <Button
        android:id="@+id/button_help"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_help"
        />
	</LinearLayout>
    
</RelativeLayout>