<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
  	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent">

    <com.google.android.maps.MapView
     	android:id="@+id/show_map_map"
     	android:layout_width="fill_parent"
     	android:layout_height="fill_parent"
     	android:apiKey="0Q8bs9LEx6q3hQmJxS-EOouZSKlYsv7TEw00Dlg"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dip"
        android:layout_above="@+id/layout_buttons" 
     	android:clickable="true" />

	<LinearLayout
        android:id="@+id/layout_buttons" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
		android:orientation="horizontal"
     >
	    
	<Button
        android:id="@+id/button_aslist"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_aslist" 
    	/>

    <Button
        android:id="@+id/button_position"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_position" 
        />

    <Button
        android:id="@+id/button_help"
        android:layout_width="0px"
	    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_help"
        />
	</LinearLayout>
    
</RelativeLayout>